<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PMS QR Code</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="drawer_open">Slider Menu Opened</string>
    <string name="drawer_close">Slider Menu Closed</string>

    <!-- Nav Drawer Menu Items -->
    <string-array name="nav_drawer_items">
        <item>PMS QR Code</item>
        <item>Log In</item>
        <item>Pig Lists</item>
         <item>Add a Pig</item>
        <item>About This Application</item>
        <item>How to?</item>
       
    </string-array>

    <!-- Nav Drawer List Item Icons -->
    <!-- Keep them in order as the titles are in -->
    <array name="nav_drawer_icons">
        <item>@drawable/ic_home</item>
        <item>@drawable/ic_people</item>
        <item>@drawable/ic_facts</item>
        <item>@drawable/ic_whats_hot</item>
        <item>@drawable/ic_communities</item>
        <item>@drawable/ic_pages</item>
    </array>
    
    
    <string-array name="purpose_list">
        <item>Not Specified</item>
        <item>For Fattening</item>
        <item>For Sow</item>
    </string-array>
    

    <!-- Content Description -->
    <string name="desc_list_item_icon">Item Icon</string>
    <string name="title_activity_camera">CameraActivity</string>
    <string name="camera_capture_btn"></string>
    <string name="send_to_upload_btn"></string>
    <string name="cancel_button"></string>
    <string name="txtView_date"></string>
    <string name="txtView_lat"></string>
    <string name="txtView_lng"></string>
    <string name="txtField_comment"></string>
    <string name="handle_slidingDrawer"></string>
    <string name="button_send_to_upload"></string>
    <string name="btn_capture"></string>
    <string name="btn_send">Send</string>
    <string name="btn_cancel">Cancel</string>
    <string name="editText1">No Location Detected (Please Open your GPS or Internet)</string>
    <string name="btn_connect_fb">Login with Facebook</string>
    <string name="app_id">824429670931760</string>
    <string name="or">OR</string>


	<string name="edit">Edit</string>
	<string name="sell">Sell</string>
	<string name="sell_count">Pigs Sold:</string>
	<string name="date">Date:</string>
	<string name="time">Time:</string>
	<string name="notes">Notes:</string>
	<string name="done">Done:</string>
	<string name="remove_count">Pigs Removed:</string>
	<string name="pregnant">Pregnant</string>
	<string name="gave_birth">Gave Birth</string>
    <string name="save">Save</string>
    <string name="goto_details">Go to Details</string>
    <string name="close">Close</string>
    <string name="cancel">Cancel</string>
    <string name="count">Number of Pigs:</string>
    <string name="removed_count">Removed:</string>
    <string name="group_name">Name:</string>
    <string name="invalid_qr">Invalid QR Code</string>
    <string name="group_name_nocol">Group Name</string>
    <string name="sort">Sort</string>
    <string name="purpose">Purpose:</string>
    <string name="vaccine">Vaccine/Medication:</string>
    <string name="label_vaccine">Vaccine:</string>
    <string name="label_feeds">Feeds:</string>
    <string name="timebirth">Time of Birth:</string>
	<string name="birthdate">Date of Birth:</string>
	<string name="age">Age:</string>
	<string name="date_giving_birth">Date of Giving Birth:</string>
	<string name="expected_milking_date">Expected Delivery:</string>
	<string name="date_pregnancy">Date of Pregnancy:</string>
	<string name="date_added">Date Added:</string>
	<string name="pregnancy_count">Times Pregnant:</string>
	<string name="btn_add_pigs">Add Pig</string>
	<string name="label_purpose">Purpose:</string>
	<string name="label_vaccinelog">Vaccine Logs:</string>
	<string name="label_feedslog">Feeds Logs:</string>
	<string name="input_add_purpose"></string>
	<string name="add_pig">Add Pig</string>
	<string name="no_of_pigs">Number of Pigs:</string>	
	<string name="input_add_noof_pigs"></string>	
	<string name="label_group_name">Name:</string>	
	<string name="label_as_group">As Group:</string>
	<string name="label_date_of_birth">Date of Birth:</string>	
	<string name="add_time_of_birth">Time of Birth:</string>	
	<string name="stock">In Stock:</string>	
	<string name="sold">Sold</string>
	<string name="removed">Removed</string>
	<string name="user_code">Admin Code</string>	
	<string name="loginBtn">Login</string>	
	<string name="total_pigs">Total Pigs:</string>	
	<string name="totalPigsCount">0</string>
	<string name="alarm_morning">Morning Alarm</string>
	<string name="alarm_noon">Noon Alarm</string>	
	<string name="alarm_evening">Afternoon Alarm</string>
	<string name="reprint">Re-Print</string>
	<string name="logvaccine">Log Vaccine/Medication</string>
	<string name="logfeeds">Log Feeds</string>
	<string name="add">Add</string>
	<string name="view">View</string>
	<string name="hint_optional">(optional)</string>
	<string name="hint_remove_notif">(remove notification)</string>
	<string name="empty_logs">No logs for this pig.</string>
</resources>