<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="5dp" >

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TableRow >
            <TextView
                android:id="@+id/tv_description"
                android:text="@string/vaccine"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/main_color" />
            
            <EditText
                android:id="@+id/et_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:layout_weight="1" />

        </TableRow>
        


        <TableRow >
            <TextView
                android:text="@string/notes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/main_color" />
            
            <EditText
                android:id="@+id/et_notes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/hint_optional" />

        </TableRow>
        
        <TableRow
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_marginTop="10dp" >
	
	            <TextView
	                android:layout_gravity="center_vertical"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:text="@string/done"
	                android:textAppearance="?android:attr/textAppearanceMedium"
	                android:textColor="@color/main_color" />

	            <LinearLayout
	                android:layout_width="match_parent"
	                android:layout_height="wrap_content">
	                <CheckBox
		                android:id="@+id/checkbox_done"
		                android:layout_width="wrap_content"
		                android:layout_height="wrap_content" />
		            
		            <TextView
		                android:layout_width="wrap_content"
		                android:layout_height="wrap_content"
		                android:text="@string/hint_remove_notif"
		                android:textAppearance="?android:attr/textAppearanceSmall"
		                android:textColor="@android:color/darker_gray" />
	            </LinearLayout>
	            
	        </TableRow>
    </TableLayout>

</LinearLayout>