<?xml version="1.0" encoding="utf-8"?>

 <ScrollView
       xmlns:android="http://schemas.android.com/apk/res/android"
       android:id="@+id/scrollView1"
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:fillViewport="true" >
       
     
	<LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical"
	    >
	 
	   <TableLayout
	        android:layout_width="match_parent"
	        android:layout_height="0dp"
	        android:layout_weight="1"
	        android:padding="20dp" >
	        
	        <TableRow
	            android:id="@+id/tableRow1"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_marginTop="40dp" >
	
	            <TextView
	                android:id="@+id/textView2"
	                android:layout_width="match_parent"
	                android:layout_height="wrap_content"
	                android:text="@string/label_purpose"
	                android:textAppearance="?android:attr/textAppearanceMedium"
	                android:textColor="@color/main_color" />
	
	            <Spinner
	                android:id="@+id/spinner_add_purpose"
	                android:layout_width="match_parent"
	                android:layout_height="wrap_content"
	                android:entries="@array/purpose_list" />
	        </TableRow>
	
	        <TableRow
	            android:id="@+id/tableRow2"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_marginTop="10dp" >
	
	            <TextView
	                android:id="@+id/tv_extradate"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:text="@string/no_of_pigs"
	                android:textAppearance="?android:attr/textAppearanceMedium"
	                android:textColor="@color/main_color" />
	
	            <EditText
	                android:id="@+id/input_add_noof_pigs"
	                android:layout_width="match_parent"
	                android:layout_height="wrap_content"
	                android:ems="10"
	                android:inputType="number" />
	        </TableRow>
	
	        <TableRow
	            android:id="@+id/tableRow3"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_marginTop="10dp" >
	
	            <TextView
	                android:id="@+id/textView3"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:text="@string/label_group_name"
	                android:textAppearance="?android:attr/textAppearanceMedium"
	                android:textColor="@color/main_color" />
	
	            <EditText
	                android:id="@+id/input_add_group_name"
	                android:layout_width="match_parent"
	                android:layout_height="wrap_content"
	                android:ems="10" >
	
	                <requestFocus />
	            </EditText>
	        </TableRow>
	
	        <TableRow
	            android:id="@+id/tableRow4"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_marginTop="10dp" >
	
	            <TextView
	                android:id="@+id/textView4"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:text="@string/label_date_of_birth"
	                android:textAppearance="?android:attr/textAppearanceMedium"
	                android:textColor="@color/main_color" />
	        </TableRow>
	
	        <DatePicker
	            android:id="@+id/datePicker1"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:calendarViewShown="false"
	            android:maxDate="" />
	
	        <TableRow
	            android:id="@+id/tableRow5"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content" >
	
	            <TextView
	                android:id="@+id/textView5"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:text="@string/add_time_of_birth"
	                android:textAppearance="?android:attr/textAppearanceMedium"
	                android:textColor="@color/main_color" />
	        	
	        </TableRow>
			
	      	<TimePicker
		       android:id="@+id/alarm_morning"
		       android:layout_width="wrap_content"
		       android:layout_height="wrap_content"
		       android:layout_weight="0.09" />
	    </TableLayout>

	    <Button
	    	android:id="@+id/btn_add_pigs"
	    	android:layout_width="wrap_content"
	    	android:layout_height="wrap_content"
	    	android:layout_marginBottom="22dp"
	    	android:layout_gravity="right"
	    	android:text="@string/add_pig"
	    	android:layout_marginRight="30dp"
	    	 />
	
	</LinearLayout>
</ScrollView>