<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:id="@+id/camera_parent_preview"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="horizontal" >
    </LinearLayout>
    
       <FrameLayout
              android:id="@+id/activity_camera_preview"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent" >

      </FrameLayout>
    
    <SlidingDrawer
            android:id="@+id/slidingDrawer1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="bottom"
            android:background="#00000000"
            android:content="@+id/content"
            android:handle="@+id/handle"
            android:visibility="gone" >

            <Button
                android:id="@+id/handle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/handle"
                android:text="@string/handle_slidingDrawer" />

            <LinearLayout
                android:id="@+id/content"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/preview_img"
                android:gravity="center"
                android:orientation="vertical" >

                <ScrollView
                    android:id="@+id/scrollView1"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1" >

                    <TableLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" 
                      	android:layout_marginTop="20dp"
                      	android:layout_marginLeft="10dp">

                        <TableRow
                            android:id="@+id/tableRow1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            >
                                                        
                            <ImageView
                                android:id="@+id/imageView_date"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:src="@drawable/datetime" 
                                android:layout_marginRight="10dp"
                                android:layout_marginBottom="10dp"
                               />

                            <TextView
                                android:id="@+id/txtView_date"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/txtView_date"
                                
                                />
                            
                        </TableRow>

                        <TableRow
                            android:id="@+id/tableRow2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" 
                         >
                            
                              <ImageView
                                android:id="@+id/imageView2_location"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:src="@drawable/locx1" 
                                android:layout_marginRight="10dp"
                                android:layout_marginBottom="10dp"
                        />

                            <TextView
                                android:id="@+id/txtView_latLng"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/txtView_lat" 
                                android:layout_marginLeft="5dp"
                               
                             />

                            <TextView
                                android:id="@+id/txt_username"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textSize="12dp"                    
                                android:visibility="gone"
                                android:layout_marginLeft="5dp"
                              >
                                
                            </TextView>
                            
                        </TableRow>

                        <TableRow
                            android:id="@+id/tableRow3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="5dp" >
                            
                            <ImageView
                                android:id="@+id/imageView3_comment"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:src="@drawable/comment"
                                android:layout_marginRight="10dp"
                                android:layout_marginBottom="10dp"
                                />

                            <EditText
                                android:id="@+id/editText1_comment"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:hint="Your Comment Here"
                                android:inputType="textMultiLine"
                                android:lines="2" 
                                android:layout_marginLeft="5dp"
                                android:layout_marginRight="3dp"
                                />
                        </TableRow>
                    </TableLayout>
                    
                    
                </ScrollView>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <Button
                        android:id="@+id/btn_send"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/btn_send" />

                    <Button
                        android:id="@+id/btn_cancel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/btn_cancel" />
                </LinearLayout>
            </LinearLayout>
        </SlidingDrawer>

       <FrameLayout
           android:id="@+id/camera_bg"
           android:layout_width="wrap_content"
           android:layout_height="match_parent"
           android:layout_gravity="right"
           android:background="@drawable/bg_btncamx1"
           
           android:padding="6dp" >

            <Button
                android:id="@+id/button_capture"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/camera_button"
                android:minHeight="0dp"
                android:minWidth="0dp"
                android:text="@string/btn_capture"
             />
        </FrameLayout>

</FrameLayout>